fix(code-snippet): set single line overflow-x to auto (#2953)

--- a/packages/components/src/components/code-snippet/_code-snippet.scss
+++ b/packages/components/src/components/code-snippet/_code-snippet.scss
@@ -80,7 +80,7 @@
   .#{$prefix}--snippet--single .#{$prefix}--snippet-container {
     display: flex;
     align-items: center;
-    overflow-x: scroll;
+    overflow-x: auto;
     position: relative;
     padding: 0 0 $carbon--spacing-05 0;
     height: rem(56px);
